# belib-data-engineering

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.in  requirements.txt
.github/workflows/: ci.yml
airflow_conf/: docker-compose.yaml
belib-pipeline/: README.md  pyproject.toml  requirements-pre.txt  requirements-pyarrow.txt  requirements.in  requirements.txt  session_store.db  stats.json
belib-pipeline/conf/: logging.yml
belib-pipeline/conf/base/: catalog.yml  parameters.yml
belib-pipeline/docs/source/: conf.py  index.rst
belib-pipeline/notebooks/: EDA.ipynb  fetch_and_save_data.ipynb
belib-pipeline/src/: visualize.py
belib-pipeline/src/belib_pipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py
belib-pipeline/src/belib_pipeline/pipelines/data_processing/: nodes.py  pipeline.py
belib-pipeline/src/belib_pipeline/pipelines/data_science/: nodes.py  pipeline.py  visualize.py
belib-pipeline/tests/: test_run.py
belib-pipeline/tests/pipelines/data_science/: test_pipeline.py
belib-workflo/: README.md  pyproject.toml
belib-workflo/data/01_raw/: belib_data.csv
belib-workflo/src/belib_workflo/: __init__.py  __main__.py
belib-workflo/tests/: test_run.py
belib-workflo/tests/pipelines/data_science/: test_pipeline.py
dags/: api_to_kafka.py  belib_data_dag.py  kafka_to_mongodb.py
elasticsearch-kibana/: docker-compose.yml
factory/: airflow-test.json
linkedService/: AzureDatabricks1.json  AzureDatabricksDeltaLake1.json
notebook/: recuperation_dedonnée_mongodb.ipynb
pipeline/: Orchester_API.json  orchestration.json
script/: bike_data_pipeline.py  connexion_mongodb.py  donnée_kafka_vers_mongodb.py  getApi.py  kafka_consumer_test.py  kafka_data_pipeline.py  kafka_producer_test.py  kafka_to_mongodb.py  profiling_données.py  spark_analysis.py  test_connexion_mongodb.py
