[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "belib_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
belib-pipeline = "belib_pipeline.__main__:main"

[tool.kedro]
package_name = "belib_pipeline"
project_name = "Belib-Pipeline"
kedro_init_version = "0.19.5"
tools = [ "Linting", "Testing", "Data Structure", "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/belib_pipeline -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "belib_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
